[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
futures = "0.3.17"
url = "2.2.2"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json"] }

